Estrutura do html na pagina homepage como principal e extendendo para as outras pages

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>FakePinterest</title>
+    <title>
+        {% block titulo %}
+        FakePinterest
+        {% endblock %}
+    </title>
 </head>
+
+{% block body %}
 <body>
     <h1>Fake Pinterest no ar!</h1>
-
 </body>
+{% endblock body %}
+
 </html>
