--- a/templates/perfil.html
+++ b/templates/perfil.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <title>Perfil - FakePinterest</title>
-</head>
+{% extended "homepage.html" %}
+
+{% block titulo % }
+Perfil - {{ usuario }}
+{% endblock %}
+
+{% block body %}
 <body>
     <h1>Perfil do Fulano: {{ usuario }}</h1>
 
 <a href="{{ url_for('homepage') }}">Sair</a>
 </body>
-</html>
+
+{% endblock %}
