Restruturação do projeto no padrão Flash - estrutura mais usada

--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -1,6 +1,6 @@
-{% extended "homepage.html" %}
+{% extends "homepage.html" %}
 
-{% block titulo % }
+{% block titulo %}
 Perfil - {{ usuario }}
 {% endblock %}
 
