--- a/fakepinterest/templates/homepage.html
+++ b/fakepinterest/templates/homepage.html
@@ -12,6 +12,21 @@
 {% block body %}
 <body>
     <h1>Fake Pinterest no ar!</h1>
+    {% block formulario %}
+ <form method="POST">
+  {{ form.csrf_token }}
+
+     {{ form.email.label() }}
+     {{ form.email() }}
+
+     {{ form.senha.label() }}
+     {{ form.senha() }}
+
+     {{ form.botao_confirmacao() }}
+
+ </form>
+{% endblock %}
+
 </body>
 {% endblock body %}
 
