Ajustes no login, até aqui ojá consigo fazer login, esta salvando no banco de dados com a senha criptografada e retorna para homempage

--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -6,9 +6,14 @@ Perfil - {{ usuario }}
 
 {% block body %}
 <body>
-    <h1>Perfil do Fulano: {{ usuario }}</h1>
+    <h1>Perfil do Fulano: {{ usuario.username }}</h1>
 
 <a href="{{ url_for('homepage') }}">Sair</a>
+
+{{% for .foto in usuario.fotos %}}
+    <img>
+{{% endfor %}}
+
 </body>
 
 {% endblock %}
