--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -8,11 +8,13 @@ Perfil - {{ usuario }}
 <body>
     <h1>Perfil do Fulano: {{ usuario.username }}</h1>
 
-<a href="{{ url_for('homepage') }}">Sair</a>
+<a href="{{ url_for('logout') }}">Sair</a>
 
-{{% for .foto in usuario.fotos %}}
-    <img>
-{{% endfor %}}
+ <img src="{{ url_for('static', filename='fotos_posts/default.png')}}">
+
+{% for foto in usuario.fotos %}
+
+{% endfor %}
 
 </body>
 
