--- a/fakepinterest/templates/perfil.html
+++ b/fakepinterest/templates/perfil.html
@@ -6,6 +6,7 @@ Perfil - {{ usuario }}
 
 {% block body %}
 <body>
+{% include "navbar.html" %}
   <h1>Perfil: {{ usuario.username }}</h1>
 
 {% if form %}
@@ -16,11 +17,6 @@ Perfil - {{ usuario }}
 
 </form>
 {% endif %}
-
-
-<a href="{{ url_for('logout') }}">Sair</a>
-
-
 
 {% for foto in usuario.fotos %}
  <img src="{{ url_for('static', filename='fotos_posts/{}'.format(foto.imagem)) }}">
