--- a/fakepinterest/templates/criarconta.html
+++ b/fakepinterest/templates/criarconta.html
@@ -24,4 +24,6 @@
      {{ form.botao_confirmacao() }}
 
  </form>
+
+<a href="{{ url_for('homepage')}}">Já tem uma conta? Faça Login!</a>
 {% endblock %}
