--- a/fakepinterest/templates/navbar.html
+++ b/fakepinterest/templates/navbar.html
@@ -1,6 +1,8 @@
-<nav>
-  <a href="{{url_for('feed') }}">Feed</a>
-  <a href="{{ url_for('perfil', id_usuario=current_user.id)}}">Perfil</a>
-  <a href="{{ url_for('logout') }}">Sair</a>
 
+<nav>
+  <div>
+    <a >Feed</a>
+    <a>Perfil</a>
+    <a>Sair</a>
+  </div>
 </nav>
